# rivia

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.githooks/: pre-commit
core/: Cargo.toml
core/src/: assert.rs  error.rs  iter.rs  iter_error.rs  lib.rs  path.rs  path_error.rs  peekable.rs  string.rs  sys.rs
core/src/errors/: mod.rs  vfs.rs
core/src/sys/: entry.rs  mod.rs  path.rs
examples/: vfs.rs
src/: lib.rs  main.rs
src/core/: defer.rs  iter.rs  mod.rs  option.rs  peekable.rs  string.rs
src/errors/: core.rs  file.rs  iter.rs  mod.rs  path.rs  string.rs  user.rs  vfs.rs
src/exts/: iter.rs  mod.rs  option.rs  result.rs  string.rs
src/fs/: entry.rs  fs.rs  mod.rs
src/fs/memfs/: entry.rs  fs.rs  mod.rs
src/fs/stdfs/: entry.rs  fs.rs  mod.rs  stdfs.rs
src/iters/: mod.rs  option.rs  peekable.rs  string.rs
src/sys/: entries.rs  entry.rs  fs.rs  mod.rs  path.rs  user.rs
src/sys/fs/: chmod.rs  chown.rs  copy.rs  entries.rs  entry.rs  entry_iter.rs  mod.rs  path.rs  vfs.rs
src/sys/fs/memfs/: entry.rs  file.rs  mod.rs  vfs.rs
src/sys/fs/stdfs/: entry.rs  mod.rs  vfs.rs
src/sys/memfs/: entry.rs  file.rs  fs.rs  mod.rs  obj.rs
src/sys/stdfs/: entry.rs  fs.rs  mod.rs
src/testing/: assert.rs  mod.rs
vfs/: Cargo.toml
vfs/src/: assert.rs  file.rs  lib.rs  memfs.rs  path.rs  stdfs.rs
vfs/src/memfs/: memfs.rs  memfs_file.rs  mod.rs
vfs/src/stdfs/: file.rs  mod.rs  stdfs.rs
