[package]
name = "rivia"
version = "0.0.8"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust utilities to reduce code verbosity"
repository = "https://github.com/phR0ze/rivia"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Spliting the library from the binary with workspaces allows for a separation of
# dependencies so the binary dependencies aren't required for the library.
# path = <dependency> entries in dependencies are automatically included
[workspace]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
rivia-vfs = { path = "vfs" }

# build.rs is built with these dependencies
[build-dependencies]
chrono = "0.4"