[package]
name = "rivia"
version = "0.0.81"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust utilities to reduce code verbosity"
repository = "https://github.com/phR0ze/rivia"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
nix = "0.23"
tracing = "0.1"
itertools = "0.10"
lazy_static = "1.4"