[package]
name = "rivia-core"
version = "0.0.11"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Essential macros and extension traits"
repository = "https://github.com/phR0ze/rivia/tree/main/core"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
tracing = "0.1"
lazy_static = "1.4"