[package]
name = "rivia-vfs"
version = "0.0.128"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Virtual File System"
repository = "https://github.com/phR0ze/rivia/tree/main/vfs"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
tracing = "0.1"
lazy_static = "1.4"
rivia = { path = ".." }